--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
           <div id="best">0</div>
         </div>
         <button id="newgame">Nouvelle partie</button>
+        <button id="edit">Éditer</button>
       </div>
     </header>
 
