--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <button id="reset">Réinitialiser tout</button>
   </div>
 
+  <script src="app/data.js"></script>
   <script src="game.js"></script>
 </body>
 </html>
