--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <button id="reset">Réinitialiser tout</button>
   </div>
 
-  <script src="app/data.js"></script>
-  <script src="game.js"></script>
+  <script type="module" src="app.js"></script>
+  <script src="test.ts" type="module" ></script>
 </body>
 </html>
