Again HUGE refactors, add strategy system and file loading.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       </div>
       <div class="tile-layer" id="tile-layer"></div>
     </div>
-
+    <div id="bottom_buttons">
+      <button id="export">Exporter les coups</button>
+      <button id="import">Charger des coups</button>
+    </div>
     <div class="footer">Joueur 1 contrôle les déplacements (flèches / ZQSD / glisser). Joueur 2 choisit où et quelle valeur (configurable).</div>
     <button id="reset">Réinitialiser tout</button>
   </div>
