--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       </div>
     </header>
 
+    <div id="turn-indicator" class="turn-indicator" aria-live="polite"></div>
+
     <div class="board" id="board" tabindex="0">
       <div class="grid" id="grid">
         <!-- cellules visuelles -->
